[gd_scene load_steps=5 format=3 uid="uid://bntvhvsy8sgo0"]

[ext_resource type="Script" path="res://test-scenes/target_dummy.gd" id="1_kpu27"]
[ext_resource type="Texture2D" uid="uid://ovpak86vy40h" path="res://third_party/testing_ground_assets/target_dummy.png" id="2_31kei"]
[ext_resource type="PackedScene" path="res://scene_prefabs/characters/combat_entity.tscn" id="3_ng7py"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikenv"]
size = Vector2(30, 32)

[node name="TargetDummyDifferentStructure" type="Node2D"]
script = ExtResource("1_kpu27")

[node name="visual" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("2_31kei")

[node name="damage_readout" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -84.0
offset_right = 95.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="damage_readout"]
layout_mode = 2

[node name="Title" type="Label" parent="damage_readout/VBoxContainer"]
layout_mode = 2
text = "Last Damage:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="last_damage_raw_amount" type="Label" parent="damage_readout/VBoxContainer"]
layout_mode = 2
text = "[Raw Amount]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="last_damage_real_amount" type="Label" parent="damage_readout/VBoxContainer"]
layout_mode = 2
text = "[Actual Amount]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="last_damage_type" type="Label" parent="damage_readout/VBoxContainer"]
layout_mode = 2
text = "[Type]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="collision" type="StaticBody2D" parent="."]
collision_layer = 128
collision_mask = 135

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_ikenv")

[node name="CombatEntity" parent="." instance=ExtResource("3_ng7py")]
max_health = 1e+06
